# gtk4_list_clocks

./: LICENSE  README.md  Screenshot 1png  meson.build
Resources/: gresources.xml
Resources/Styles/: Application.css
Sources/: Main.vala  MainWindow.vala  meson.build
Sources/Models/: TimezoneInfo.vala  TimezonesListModel.vala
Sources/Utils/: CountryCodeToFlags.vala  UtilsTest.vala  meson.build
Sources/Widgets/: Clock.vala  ClockFace.vala  ClockInfoDisplay.vala
resources/: gresources.xml  meson.build
src/: Main.vala  MainWindow.vala  meson.build
src/Models/: TimezoneInfo.vala  TimezonesListModel.vala
src/Widgets/: Clock.vala  ClockFace.vala  ClockInfoDisplay.vala  MainWindow.vala
